# ocr-app

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml
docs/: api_reference.md  hipaa_notes.md
src/: __init__.py  config.py  main.py
src/api/: __init__.py  models.py  router.py
src/llm/: __init__.py  base.py  factory.py  gemini_llm.py  openai_llm.py  prompts.py  vision_extractor.py
src/ocr/: __init__.py  base.py  factory.py  gemini_ocr.py  google_docai_stub.py  mistral_document_ocr.py  mistral_ocr.py
src/pdf/: __init__.py  converter.py  filler.py  generator.py  markdown_to_pdf.py  overlay.py  utils.py
src/pipeline/: __init__.py  processor.py  simple_processor.py
src/utils/: image_utils.py  logging.py
static/: app.js  index.html  styles.css
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_llm_base.py  test_ocr_base.py  test_pdf_filler.py
